--- a/client/package.json
+++ b/client/package.json
@@ -12,6 +12,8 @@
   "dependencies": {
     "@reduxjs/toolkit": "^2.0.1",
     "firebase": "^10.7.1",
+    "flowbite": "^2.2.1",
+    "flowbite-react": "^0.7.2",
     "jsonwebtoken": "^9.0.2",
     "react": "^18.2.0",
     "react-dom": "^18.2.0",
@@ -32,6 +34,7 @@
     "eslint-plugin-react-hooks": "^4.6.0",
     "eslint-plugin-react-refresh": "^0.4.5",
     "postcss": "^8.4.33",
+    "tailwind-scrollbar": "^3.1.0",
     "tailwindcss": "^3.4.1",
     "vite": "^5.0.8"
   }
